[package]
name = "codecrafters-interpreter"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.89"                                    # error handling
bytes = "1.7.2"                                      # helps manage buffers
clap = { version = "4.5.20", features = ["derive"] }
lazy_static = "1.5.0"
thiserror = "1.0.64"                                 # error handling
